docs/assets/less/overrides.less
@import (reference) '../../../lib/build/less/variables/colors';
@import (reference) '../../../lib/build/less/variables/typography';
@import (reference) '../../../lib/build/less/variables/spacing';
@import (reference) '../../../lib/build/less/utilities/internals';
@import (reference) '../../../lib/build/less/utilities/spacing';
@import (reference) '../../../lib/build/less/utilities/typography';

body {
  --sidebar-width: unset;
}

tr {
  &:nth-child(2n) {
    background-color: unset;
  }
}

:root {
  --c-brand: @purple-500;
  --navbar-height: 6.4rem;
}

.page {
  padding-top: var(--navbar-height);
  padding-left: var(--sidebar-width);
}

.theme-default-content {
  max-width: 75rem !important;

  > p, > ol, > ul {
    margin-top: var(--su16);
  }

  > h2 {
    font-size: var(--fs24);
  }

  h2, h3 {
    font-weight: var(--fw-bold);
    border-bottom: unset;
  }

  h3 {
    font-size: unset;
  }

  ol, ul {
    .d-stack8();
    padding-left: revert;
  }

  .d-table {
    thead {
      tr, th, td {
        border: unset;
      }
    }

    tbody {
      th, td {
        border-bottom: var(--su1) solid var(--table-bc);
        border-left: unset;
        border-right: unset;
      }
    }
  }
}

@media screen and (max-width: 719px) {
  .page {
    padding-right: 0 !important;
    padding-left: 0 !important;
    padding-bottom: 0 !important;
  }
}

@media (max-width: 959px) {
  .page {
    padding-left: var(--sidebar-width-mobile);
  }
}

